alignment fix

--- a/src/app/about/about/about.component.scss
+++ b/src/app/about/about/about.component.scss
@@ -64,7 +64,7 @@
   .about-container {
     flex-direction: column;
     padding: 5%;
-    height:50vh;
+    height:60vh;
   }
   .image-container {
     flex-direction: column;
