--- a/src/app/experience/experience/experience.component.scss
+++ b/src/app/experience/experience/experience.component.scss
@@ -30,6 +30,7 @@ h3{
             li{
                 list-style: none;
                 margin-left: 5px;
+                margin: 1%;
             }
             div{
                 color:#2dd4bf;
@@ -56,7 +57,12 @@ h3{
       .experience{
         width: 100%;
         height: 100%;
+        text-align: center;
       }
+    }
+    ul{
+        justify-content: center;
+        padding: 0;
     }
     li{
         margin: 2%;
